<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MangaDetailsActivity">


    <CheckBox
        android:id="@+id/favoriteButton"
        android:layout_width="67dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:button="@drawable/star_off"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <ImageView
        android:id="@+id/coverImg"
        android:layout_width="144dp"
        android:layout_height="178dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="88sp"
        android:layout_height="88sp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TableLayout
        android:id="@+id/table_data"
        android:layout_width="400dp"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="#E0E0E0"
                android:orientation="horizontal"
                android:padding="3dip">

                <TextView
                    android:id="@+id/manga_status_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/manga_status_title" />

                <TextView
                    android:id="@+id/manga_status_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="TextView"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:padding="3dip">

                <TextView
                    android:id="@+id/manga_score_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/manga_score_title" />

                <TextView
                    android:id="@+id/manga_score_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="TextView"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:padding="3dip">

                <TextView
                    android:id="@+id/manga_start_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/manga_start_title" />

                <TextView
                    android:id="@+id/manga_start_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="#E0E0E0"
                android:orientation="horizontal"
                android:padding="3dip">

                <TextView
                    android:id="@+id/manga_end_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/manga_end_title" />

                <TextView
                    android:id="@+id/manga_end_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="TextView"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="#E0E0E0"
                android:orientation="horizontal"
                android:padding="3dip">

                <TextView
                    android:id="@+id/manga_volumes_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/manga_volumes_title" />

                <TextView
                    android:id="@+id/manga_volumes_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="TextView"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:padding="3dip">

                <TextView
                    android:id="@+id/manga_chapters_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/manga_chapters_title" />

                <TextView
                    android:id="@+id/manga_chapters_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="TextView"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="219dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/description"
        android:layout_width="371dp"
        android:layout_height="336dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/sinopsis_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="172dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="199dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="4dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-134dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="4dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="312dp" />

    <TextView
        android:id="@+id/sinopsis_text"
        android:layout_width="90dp"
        android:layout_height="31dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/manga_synopsis_title"


        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline27"
        app:layout_constraintVertical_bias="0.064" />


    <ImageView
        android:id="@+id/share"
        android:layout_width="49dp"
        android:layout_height="51dp"
        android:layout_marginTop="136dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@mipmap/share" />

</androidx.constraintlayout.widget.ConstraintLayout>